k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-microshop
  labels:
    app: devops-microshop
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-microshop
  template:
    metadata:
      labels:
        app: devops-microshop
    spec:
      containers:
        - name: app
          image: devops-microshop-app:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
